# image_upscaler

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy.sh  main.py  pyproject.toml  run_local.sh  run_with_proxy.sh  test_upscale.py
app/: __init__.py  main.py  upscaler.py
app/static/: app.js  index.html  styles.css
