[project]
name = "imagen-upscaler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "google-genai>=2.4.0",
    "pillow>=12.2.0",
    "pyopenssl>=26.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "uvicorn>=0.47.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
